# -qidian-dl

./: .gitignore  README.md  pyproject.toml
src/qidian_spider/: __main__.py  config.py
src/qidian_spider/browser/: manager.py
src/qidian_spider/models/: book.py
src/qidian_spider/spiders/: base.py  book_spider.py
src/qidian_spider/storage/: database.py
src/qidian_spider/utils/: logger.py
