[project]
name = "qidian-spider"
version = "0.1.0"
description = "起点中文网书籍爬虫工具"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "httpx>=0.28",
    "lxml>=6.0",
    "beautifulsoup4>=4.12",
    "pydantic>=2.5",
    "aiosqlite>=0.19",
    "click>=8.1",
    "loguru>=0.7",
]

[project.scripts]
qidian-spider = "qidian_spider.__main__:cli"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
